fixed remaining white space on index page

--- a/style/components/grid.css
+++ b/style/components/grid.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   min-width: 100vw;
-  min-height: 100vh;
+  height: 100vh;
   grid-gap: 16px;
 }
 
