--- a/style/index.css
+++ b/style/index.css
@@ -13,7 +13,8 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
 
 body {
-  margin: 0px;
+  margin: 0;
+  padding: 0;
   font-family: 'Work Sans', sans-serif !important;
 }
 
